# Rasterizer-From-Scratch

./: .gitignore  .gitmodules  CMakeLists.txt  Install.sh  README.md  Reload.sh
src/: Utility.hpp  main.cpp  settings.hpp  utility.hpp
src/rasterizer/: rasterizer.cpp  rasterizer.hpp
src/renderer/: camera.cpp  camera.hpp  model.cpp  model.hpp  rasterizer.cpp  rasterizer.hpp  structures.hpp
